# ProyectoIntercicloDACP

./: .gitignore  CMakeLists.txt  README.md  main.cpp
resultados/: estadisticas.csv  video_slices.avi
